Changelog
=========

3.0 (unreleased)
----------------

- Fix display of geocoding results
  [mpeeters]

- Use google api key if defined for geocoding to avoid errors due to the new
  google api policy
  [mpeeters]

- Fix google url and allow to set google api key (#25)
  [pbauer]

- Fix required version of collective.geo.openlayers.
  [pbauer]

- Fixed list_language_files collective.geo.openlayers doesn't use portal_skin anymore
  [giorgio]

- Fixed tests and doctests for plone5 and external api modifications
  [pbauer]

- moved resources to new plone5 resource registry
  [pbauer]

- Modified controlpanel code to use FormWrapper machinery
  [pbauer]

- Updated javascript to draw the map in new plone5 mockup hidden tab
  [pbauer]

- Fix not loaded map case when don't have jquery.tools.js and open edit view not 
  in "coordinates" tab
- Add ImgPath in map's default options to point the resource folder
  [lucabel]



2.3 (2015-11-17)
----------------


- Updated classifiers list for package
  [macagua]

- Updated spanish translation
  [macagua]


2.2 (2015-05-02)
----------------

- Added more french translations
  [tiazma]

- Precised translation domian in macro context
  [tiazma]

- Fixed error occurring when no location found
  [tiazma]


2.1.3 (2014-08-16)
------------------

- Bug fix, utils check is a object use "use_custom_styles",
  if not sytles are take from global styles
  [bsuttor]

- Updated classifiers list for package
  [macagua]

- Updated Spanish translation
  [macagua]

- Use getMultiAdapter instead of restrictedTraverse in Views
  [gborelli]


2.1.2 (2014-03-16)
------------------

- Add content type location's attribute as default value
  for geocoding input field
  [gborelli]

- Fix #14 - GeoCoderView
  [gborelli]


2.1.1 (2014-02-26)
------------------

- Fix geopy version; geopy 0.98.1 is currently broken
  [gborelli]


2.1 (2014-02-26)
----------------

- Moved collective_geo_styles metadata and related indexer
  from c.geo.contentlocations